ChangeLog
=========

recent
------
- installer-gui: - downloader is able to follow redirected urls using the 302 http response code

0.8.1
-------
- all:           - added .tar.bz2 support
                 - some internal changes to allow 'file://' in config-local.txt
- installer-gui: - removed downloaded files when download is broken 


0.8.0
-------
- installer-gui: - added category and package info display
                 - added package related detailed notes 
                 - added hint files containing package description, categories and dependencies
                 - added hint file parsing for modindex site parser to get full package information 
                 - dropped support for *.notes files, they are replaced by the *.hint files
- configer:      - new tool added for config file creating based on 'hint'-files

0.7.6-1
-------
- installer-gui: - relinked without msvcrt80.dll reference to avoid dependency to vc++_redist package

0.7.6
------
- installer-gui: - added simple versioned dependency support
                 - added more debug output in GlobalConfig 
                 - download to and read config files from the package download directory 
                 - only support zip archive format for apachemodindex web site scanner
                 - manual mirror adding support
                 - bug fix related to package list parsing (some sites uses uppercase html tags) 
- packager:      - new debuglibs option added, which adds debug libraries to lib binary package 
                
0.7.5
------
- installer-gui: - added mirror selecting support

0.7.4
------
- installer-gui: - fixed package selection for download/remove and install 
                 - added compiler type option in install root and combined settings page 

0.7.3
------
- installer-gui: - fixed in use replacement of kdewin-installer-gui   
                   by installing a versioned installer gui executable 
                   and a wrapper named kdewin-installer-gui   